--- a/rundeckapp/grails-spa/build.gradle
+++ b/rundeckapp/grails-spa/build.gradle
@@ -13,6 +13,8 @@ node{
 }
 
 task npmCI(type: NpmTask, group: 'Node') {
+  dependsOn 'npmCISwitch'
+  enabled false
   args = ['ci']
 
   inputs.file(file("${projectDir}/package.json"))
@@ -21,14 +23,35 @@ task npmCI(type: NpmTask, group: 'Node') {
   outputs.dir(file("${projectDir}/node_modules"))
 }
 
+task npmCISwitch {
+  inputs.file(file("${projectDir}/package.json"))
+  inputs.file(file("${projectDir}/package-lock.json"))
+  inputs.dir "src"
+  inputs.dir "build"
+  inputs.dir "config"
+
+  outputs.file "${buildDir}/switch"
+
+  outputs.cacheIf {true}
+  doLast {
+    tasks.npmCI.enabled = true
+  }
+}
+
 task runNpmBuild(type: NpmTask, group: 'build') {
-    dependsOn npmCI
+    dependsOn 'npmCISwitch', 'npmCI'
 
     workingDir = file("${project.projectDir}")
 
-    inputs.dir 'packages'
-
+    inputs.file(file("${projectDir}/package.json"))
+    inputs.file(file("${projectDir}/package-lock.json"))
+    inputs.dir "src"
+    inputs.dir "build"
+    inputs.dir "config"
     outputs.dir(buildDir)
+
+    outputs.cacheIf {true}
+
     args = ['run', 'build']
 }
 
@@ -37,3 +60,4 @@ assemble.dependsOn runNpmBuild
 artifacts {
   spa(file: buildDir, name: "${project.name}", type: 'directory', builtBy: runNpmBuild)
 }
+
