Allow to set supplementalRoles for LDAP configuration

--- a/docker/official/remco/templates/jaas-loginmodule.conf
+++ b/docker/official/remco/templates/jaas-loginmodule.conf
@@ -52,6 +52,9 @@
     {% if exists("/rundeck/jaas/ldap/nestedgroups") -%}
         nestedGroups={{ getv("/rundeck/jaas/ldap/nestedgroups") }}
     {% endif %}
+    {% if exists("/rundeck/jaas/ldap/supplementalroles") -%}
+        supplementalRoles={{ getv("/rundeck/jaas/ldap/supplementalroles") }}
+    {% endif %}
 
     ;
 {% endmacro %}
